# OOP-4sem-project

./: .gitignore  README.md  assinment_json_from_server_to_student.json  assinment_json_from_server_to_student_example.json  assinment_json_from_student_to_server.json  assinment_json_from_student_to_server_example.json  assinment_json_from_teacher_to_server.json  assinment_json_from_teacher_to_server_example.json  from_teacher_to_server.json
Client/Client/: Client.pro  addeditableheadercommand.cpp  addeditableheadercommand.h  addeditabletestanswercommand.cpp  addeditabletestanswercommand.h  addeditabletestassignmentcommand.cpp  addeditabletestassignmentcommand.h  assignmentbuilder.h  assignmentcreationwindow.cpp  assignmentcreationwindow.h  assignmentcreationwindow.ui  assignmentcreationwindowaddheadercommand.cpp  assignmentcreationwindowaddheadercommand.h  assignmentcreationwindowcaretaker.cpp  assignmentcreationwindowcaretaker.h  assignmentcreationwindowcommand.cpp  assignmentcreationwindowcommand.h  assignmentcreationwindowcommandhistory.cpp  assignmentcreationwindowcommandhistory.h  assignmentcreationwindowmemento.cpp  assignmentcreationwindowmemento.h  assignmentguibuilder.cpp  assignmentguibuilder.h  assignmentguidirector.cpp  assignmentguidirector.h  assignmentsessionslistmodel.cpp  assignmentsessionslistmodel.h  assignmentslistmodel.cpp  assignmentslistmodel.h  assignmentsnamelistmodel.cpp  assignmentsnamelistmodel.h  authorizationwindow.cpp  authorizationwindow.h  authorizationwindow.ui  checkassignment.cpp  checkassignment.h  checkclientthread.cpp  checkclientthread.h  classroomofstudentwindow.cpp  classroomofstudentwindow.h  (+79 more)
Server/: CMakeLists.txt  main.cpp
Server/Database/: Database.cpp  Database.h  DatabaseLog.cpp  DatabaseLog.h  DatabaseOperation.cpp  DatabaseOperation.h  DatabaseService.cpp  DatabaseService.h  DatabaseTable.cpp  DatabaseTable.h
Server/Database/DatabaseType/: DatabaseAssignmentSessionType.cpp  DatabaseAssignmentSessionType.h  DatabaseAssignmentType.cpp  DatabaseAssignmentType.h  DatabaseAuthorizationType.cpp  DatabaseAuthorizationType.h  DatabaseClassroomType.cpp  DatabaseClassroomType.h  DatabaseStudentAssignmentSessionType.cpp  DatabaseStudentAssignmentSessionType.h  DatabaseStudentClassroomType.cpp  DatabaseStudentClassroomType.h  DatabaseType.cpp  DatabaseType.h  DatabaseUserType.cpp  DatabaseUserType.h
Server/Database/SQLite/: DatabasePath.h  SQLiteAdapter.cpp  SQLiteAdapter.h  SQLiteService.cpp  SQLiteService.h
Server/Database/Tables/: Table.h  UserTable.cpp  UserTable.h
Server/database_src/: CLion_database  database  database_build_script.sql  database_build_script_mysql.sql  database_build_script_sqlite.sql  database_structure.mwb  database_structure_mysql.mwb
Server/server_src/: custom_json_parser.h
common_src/: assignmentinfo.cpp  assignmentinfo.h  assignmentsessioninfo.cpp  assignmentsessioninfo.h  classroominfo.cpp  classroominfo.h  client.h  common_net.h  connection.h  message.h  messagetypes.h  net.h  server.h  studentassignmentsessioninfo.cpp  studentassignmentsessioninfo.h  studentassignmentsessioninfoforteacher.cpp  studentassignmentsessioninfoforteacher.h  testanswer.cpp  testanswer.h  testassignment.h  tsqueue.h
common_src/Entities/: Assignment.cpp  Assignment.h  AssignmentSession.cpp  AssignmentSession.h  Authorization.cpp  Authorization.h  Classroom.cpp  Classroom.h  Entities.h  Entity.h  StudentAssignmentSession.cpp  StudentAssignmentSession.h  StudentClassroom.cpp  StudentClassroom.h  User.cpp  User.h
docs/: _assignment_8h_source.html  _assignment_session_8h_source.html  _authorization_8h.html  _classroom_8h.html  _client_2_client_2client_8h.html  _client_2_client_2client_8h_source.html  _client_2_client_2main_8cpp.html  _database_8cpp.html  _database_8h.html  _database_8h_source.html  _database_log_8cpp.html  _database_log_8h.html  _database_operation_8h.html  _database_path_8h.html  _entities_8h.html  _entities_8h_source.html  _entity_8h.html  _entity_8h_source.html  _r_e_a_d_m_e_8md.html  _s_q_lite_adapter_8h_source.html  _s_q_lite_service_8h.html  _student_assignment_session_8h.html  _student_assignment_session_8h_source.html  _student_classroom_8h.html  _student_classroom_8h_source.html  _user_8h.html  _user_8h_source.html  addeditableheadercommand_8h_source.html  addeditabletestanswercommand_8cpp.html  addeditabletestanswercommand_8h.html  addeditabletestanswercommand_8h_source.html  addeditabletestassignmentcommand_8h.html  annotated.html  assignmentbuilder_8h.html  assignmentbuilder_8h_source.html  assignmentcreationwindow_8h_source.html  assignmentguibuilder_8cpp.html  assignmentguibuilder_8h.html  assignmentguibuilder_8h_source.html  assignmentguidirector_8cpp.html  (+247 more)
docs/html/: _assignment_8h.html  _assignment_session_8h.html  _authorization_8h_source.html  _classroom_8h_source.html  _database_log_8h_source.html  _database_operation_8cpp.html  _database_operation_8h_source.html  _database_path_8h_source.html  _s_q_lite_adapter_8cpp.html  _s_q_lite_adapter_8h.html  _s_q_lite_service_8cpp.html  _s_q_lite_service_8h_source.html  _server_2main_8cpp.html  addeditableheadercommand_8cpp.html  addeditableheadercommand_8h.html  addeditabletestassignmentcommand_8cpp.html  addeditabletestassignmentcommand_8h_source.html  assignmentcreationwindow_8cpp.html  assignmentcreationwindow_8h.html  assignmentinfo_8cpp.html  assignmentslistmodel_8h_source.html  authorizationwindow_8h_source.html  checkassignment_8cpp.html  checkassignment_8h_source.html  checkclientthread_8cpp.html  checkclientthread_8h_source.html  class_assignment.html  class_assignment_builder-members.html  class_assignment_creation_window-members.html  class_assignment_g_u_i_director-members.html  class_assignment_session.html  class_assignment_sessions_list_model-members.html  class_authorization.html  class_authorization_window.html  class_check_client_thread-members.html  class_classroom-members.html  class_classroom.html  (+89 more)
(+90 files in other folders)
